[tool.poetry]
name = "kiln-connect"
version = "0.1.0"
description = ""
authors = ["s. rannou <mxs@sbrk.org>"]
readme = "README.md"
packages = [{include = "kiln_connect"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
