[tool.poetry]
name = "kiln-connect"
version = "0.1.0"
description = ""
authors = ["s. rannou <mxs@sbrk.org>"]
readme = "README.md"
packages = [
         {include = "kiln_connect"},
         {include = "kiln_connect/openapi_client"}
]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"
typer = "^0.7.0"
rich = "^13.3.1"
pyyaml = "^6.0"
pydantic = "^1.10.4"
python-dateutil = "^2.8.2"
frozendict = "^2.3.4"

[tool.poetry.dev-dependencies]
pytest = "^7.2.1"

[tool.poetry.scripts]
kiln-connect = 'cli.main:app'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
